# invoice-processing-pipeline

./: .gitignore  BLOG  BLOG.md  BLOG_DRAFT.md  Blog.md  Dockerfile  README.md  ROUND2_PROBLEM_STATEMENT.md  __init__.py  auditor_grpo_training.ipynb  client.py  extractor_training_grpo.ipynb  generator_grpo_training.ipynb  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: __init__.py  agents.py  app.py  environment.py  multi_agent_environment.py  web_ui.py
